--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-*.JavaScript linguist-language=Java
+
+* linguist-vendored
+*.java linguist-vendored=false
